# nRF5-cmake-scripts-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cleanup
src/: CMakeLists.txt  app_config.h  main.c
